--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,6 +24,8 @@ jobs:
 
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          node-version: '16'
 
     # Generates the snake  
       - uses: Platane/snk@master
